--- a/motivate/index.html
+++ b/motivate/index.html
@@ -4,7 +4,7 @@
 	<title>hello natke</title>
 </head>
 <body>
-<h1>hi there natke</h1><br>
+<h1>Hi there natke(Dhole)</h1><br>
 <p>khup formal jhala kay</p>
 <p>tujha snap bhagun mala pn kahi tari banu vatla pn mala evdhach basic yaetay shiktoy mi ajun</p>
 <p>chan banavla hota pn mhaje hairs ase nahi ahe natke</p>
